WIP: Spring Boot version upgrade