@@ -1,14 +1,5 @@
 package com.abelium.inatrace.components.flyway;
 
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-
-import javax.persistence.EntityManagerFactory;
-
 import org.flywaydb.core.api.FlywayException;
 import org.flywaydb.core.api.Location;
 import org.flywaydb.core.api.MigrationType;
@@ -20,10 +11,16 @@ import org.flywaydb.core.api.resolver.ResolvedMigration;
 import org.flywaydb.core.internal.resolver.MigrationInfoHelper;
 import org.flywaydb.core.internal.resolver.ResolvedMigrationComparator;
 import org.flywaydb.core.internal.resolver.ResolvedMigrationImpl;
+import org.flywaydb.core.internal.scanner.LocationScannerCache;
+import org.flywaydb.core.internal.scanner.ResourceNameCache;
 import org.flywaydb.core.internal.scanner.Scanner;
 import org.flywaydb.core.internal.util.ClassUtils;
 import org.flywaydb.core.internal.util.Pair;
 import org.springframework.core.env.Environment;
+
+import javax.persistence.EntityManagerFactory;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 
 /**
  * Migration resolver for JPA migrations. 
@@ -31,31 +28,23 @@ import org.springframework.core.env.Environment;
  */
 public class JpaMigrationResolver implements MigrationResolver {
 
-    private EntityManagerFactory entityManagerFactory;
+    private final EntityManagerFactory entityManagerFactory;
     
     /**
      * The base package on the classpath where the migrations are located.
      */
-    private Location[] locations;
+    private final Location[] locations;
 
     /**
      * The ClassLoader to use.
      */
-    private ClassLoader classLoader;
+    private final ClassLoader classLoader;
     
     /**
      * The application environment
      */
-    private Environment environment;
-    
-    /**
-     * Creates a new instance.
-     *
-     * @param locations The base packages on the classpath where to migrations are located.
-     * @param entityManager entity manager.
-     * @param classLoader The ClassLoader for loading migrations on the classpath.
-     * @param environment application environment
-     */
+    private final Environment environment;
+
     public JpaMigrationResolver(Configuration configuration, EntityManagerFactory entityManagerFactory, Environment environment) {
         this.locations = configuration.getLocations();
         this.classLoader = configuration.getClassLoader();
@@ -65,7 +54,7 @@ public class JpaMigrationResolver implements MigrationResolver {
 
     @Override
     public Collection<ResolvedMigration> resolveMigrations(Context context) {
-        List<ResolvedMigration> migrations = new ArrayList<ResolvedMigration>();
+        List<ResolvedMigration> migrations = new ArrayList<>();
 
         for (Location location : locations) {
             if (!location.isClassPath()) {
@@ -73,8 +62,11 @@ public class JpaMigrationResolver implements MigrationResolver {
             }
 
             try {
-                Collection<Class<? extends JpaMigration>> classes = 
-                        new Scanner<JpaMigration>(JpaMigration.class, Arrays.asList(location), classLoader, StandardCharsets.UTF_8).getClasses();
+
+                Collection<Class<? extends JpaMigration>> classes = new Scanner<>(JpaMigration.class,
+                        List.of(locations), classLoader, StandardCharsets.UTF_8, true, new ResourceNameCache(),
+                        new LocationScannerCache()).getClasses();
+
                 for (Class<?> clazz : classes) {
                     JpaMigration migration = ClassUtils.instantiate(clazz.getName(), classLoader);
                     ResolvedMigrationImpl migrationInfo = extractMigrationInfo(migration, clazz);
@@ -85,7 +77,7 @@ public class JpaMigrationResolver implements MigrationResolver {
             }
         }
 
-        Collections.sort(migrations, new ResolvedMigrationComparator());
+        migrations.sort(new ResolvedMigrationComparator());
         return migrations;
     }
 
@@ -107,7 +99,7 @@ public class JpaMigrationResolver implements MigrationResolver {
         String physicalLocation = ClassUtils.getLocationOnDisk(clazz);
         JpaMigrationExecutor executor = new JpaMigrationExecutor(migration, entityManagerFactory, environment);
 
-        return new ResolvedMigrationImpl(version, description, script, checksum, MigrationType.CUSTOM, physicalLocation, executor);
+        return new ResolvedMigrationImpl(version, description, script, checksum, checksum, MigrationType.CUSTOM, physicalLocation, executor);
     }
 
     private static String getShortName(Class<?> aClass) {
